--- a/UCryptPortal/src/app/modules/user/components/company/company.component.html
+++ b/UCryptPortal/src/app/modules/user/components/company/company.component.html
@@ -1,6 +1,6 @@
 <div class="bread-sec about">
   <div>
-    <h1>About Comapny</h1>
+    <h1>About Company</h1>
     <nav class="breadcrumb">
       <a class="breadcrumb-item" href="#">Home</a>
       <span class="breadcrumb-item active" aria-current="page">About</span>
