last changes requested in March

--- a/UCryptPortal/src/app/modules/user/components/company/company.component.html
+++ b/UCryptPortal/src/app/modules/user/components/company/company.component.html
@@ -30,7 +30,7 @@
           <div class="b-about">
             <img src="./assets/images/about-img.png" alt="" class="w-100 about-img">
             <div class="testi">
-              <span class="desc">UCRYPT allows encrypting documents and generating and storing safely their encryption keys</span>
+              <span class="desc">Uranus allows encrypting documents and generating and storing safely their encryption keys</span>
               <span class="author">Ayesha Al Chamy - CEO Uranus</span>
             </div>
           </div>
