--- a/UCryptPortal/src/app/modules/user/components/products/products.component.html
+++ b/UCryptPortal/src/app/modules/user/components/products/products.component.html
@@ -219,7 +219,7 @@
 
   <div class="py-5">
     <!-- Section Title -->
-    <h3 class="secondary-txt mx-auto text-center f-semi mb-5">SatrunVPN Features</h3>
+    <h3 class="secondary-txt mx-auto text-center f-semi mb-5">UranusVPN Features</h3>
     <div class="container">
       <div class="row mx-0">
         <!-- Repeatable -->
