--- a/UCryptPortal/src/styles.scss
+++ b/UCryptPortal/src/styles.scss
@@ -152,7 +152,7 @@ $body-color: #f9f9ff;
   // font-family: HelveticaNeueW23forSKY-Bd;
   height: 50px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   // position: fixed;
   // left: 0;
