--- a/UCryptPortal/src/app/modules/user/components/contact/contact.component.html
+++ b/UCryptPortal/src/app/modules/user/components/contact/contact.component.html
@@ -27,7 +27,7 @@
           <img src="./assets/images/icons/email.svg" alt="">
           <div class="ms-4">
             <h6 class="f_B fs-20 f-semi">Email</h6>
-            <p class="fs-16">info@urans-app.com</p>
+            <p class="fs-16">info@uranus.com</p>
           </div>
         </div>
 
