--- a/UCryptPortal/src/app/modules/user/components/home/home.component.html
+++ b/UCryptPortal/src/app/modules/user/components/home/home.component.html
@@ -5,9 +5,9 @@
       <div class="row mx-0">
         <div class="col-md-7 d-flex align-items-center">
           <div>
-            <h1 class="mb-4">UCrypt File & Text Encryption and
+            <h1 class="mb-4">Uranus File & Text Encryption and
               Decryption</h1>
-            <p class="fs-14 mt-2">UCrypt is an online encryption/decryption service
+            <p class="fs-14 mt-2">Uranus is an online encryption/decryption service
               <br>
               freely available through Uranus website
             </p>
@@ -76,13 +76,13 @@
         <div class="col-md-4 text-center px-5">
           <img src="./assets/images/icons/format-suported.svg" alt="" class="feat-svg">
           <h5>300+ Formats Supported</h5>
-          <p class="fs-11">UCrypt support more than 200 different encryption & decryption between more than 300 different file formats.</p>
+          <p class="fs-11">Uranus support more than 200 different encryption & decryption between more than 300 different file formats.</p>
         </div>
         <!-- Feature Two -->
         <div class="col-md-4 text-center px-5">
           <img src="./assets/images/icons/fast-easy.svg" alt="" class="feat-svg">
           <h5>Fast and easy</h5>
-          <p class="fs-11">UCrypt aim to do the encryption &
+          <p class="fs-11">Uranus aim to do the encryption &
             decryption process in under 1-2 minutes.</p>
         </div>
         <!-- Feature Three -->
